feat: 实现移动规则

--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,10 @@
   </head>
   <body>
     <div id="app"></div>
+    <div class="btn-wrap">
+      <button class="left">向左</button>
+      <button class="right">向右</button>
+      <button class="down">向下</button>
+    </div>
   </body>
 </html>
