--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       <button class="left">向左</button>
       <button class="right">向右</button>
       <button class="down">向下</button>
+      <button class="rotate">旋转</button>
     </div>
   </body>
 </html>
