feat: 游戏类开发

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,12 @@
     <title>俄罗斯方块</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div class="panel"></div>
+      <div class="tip">
+        <div class="next"></div>
+      </div>
+    </div>
     <div class="btn-wrap">
       <button class="left">向左</button>
       <button class="right">向右</button>
