--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
       <button class="right">向右</button>
       <button class="down">向下</button>
       <button class="rotate">旋转</button>
+      <button class="start">开始</button>
+      <button class="pause">暂停</button>
     </div>
   </body>
 </html>
