feat: 完善分数机制

--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,17 @@
       <div class="panel"></div>
       <div class="tip">
         <div class="next"></div>
+        <div class="score"></div>
       </div>
     </div>
     <div class="btn-wrap">
-      <button class="left">向左</button>
-      <button class="right">向右</button>
-      <button class="down">向下</button>
-      <button class="rotate">旋转</button>
-      <button class="start">开始</button>
-      <button class="pause">暂停</button>
+      <ul>
+        <li>按左键向左</li>
+        <li>按右键向右</li>
+        <li>按下键向下</li>
+        <li>按回车旋转方块</li>
+        <li>按空格暂停游戏</li>
+      </ul>
     </div>
   </body>
 </html>
