feat: 添加结束游戏键盘事件

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
         <li>按下键向下</li>
         <li>按回车旋转方块</li>
         <li>按空格暂停游戏</li>
+        <li>按ESC结束游戏</li>
       </ul>
     </div>
   </body>
