feat: 完善游戏界面，添加级别功能

--- a/public/index.html
+++ b/public/index.html
@@ -8,21 +8,25 @@
   </head>
   <body>
     <div id="app">
-      <div class="panel"></div>
+      <div class="panel">
+        <div class="mask">
+          <div class="msg"></div>
+        </div>
+      </div>
       <div class="tip">
         <div class="next"></div>
         <div class="score"></div>
+        <div class="des-wrap">
+          <ul>
+            <li>按左键向左</li>
+            <li>按右键向右</li>
+            <li>按下键向下</li>
+            <li>按回车旋转方块</li>
+            <li>按空格暂停游戏</li>
+            <li>按ESC结束游戏</li>
+          </ul>
+        </div>
       </div>
-    </div>
-    <div class="btn-wrap">
-      <ul>
-        <li>按左键向左</li>
-        <li>按右键向右</li>
-        <li>按下键向下</li>
-        <li>按回车旋转方块</li>
-        <li>按空格暂停游戏</li>
-        <li>按ESC结束游戏</li>
-      </ul>
     </div>
   </body>
 </html>
