--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>俄罗斯方块</title>
-  </head>
+  <script defer src="main-6f620c21.bundle.js"></script></head>
   <body>
     <div id="app">
       <div class="panel">
